[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Darkness/Darkness.gd" type="Script" id=1]
[ext_resource path="res://scripts/Darkness/DamageArea.gd" type="Script" id=2]
[ext_resource path="res://scripts/Darkness/OccluderEdge.gd" type="Script" id=3]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
flags = 0
width = 3840
height = 1080
noise = SubResource( 1 )

[sub_resource type="OccluderPolygon2D" id=3]
closed = false
cull_mode = 2
polygon = PoolVector2Array( 0, -540, 0, 540 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 200, 540 )

[node name="Darkness" type="Node2D"]
script = ExtResource( 1 )

[node name="LightSource" type="Light2D" parent="."]
position = Vector2( 960, 540 )
texture = SubResource( 2 )
offset = Vector2( -960, 0 )
color = Color( 0.258824, 0, 0.243137, 1 )
energy = 0.0
mode = 2
shadow_enabled = true
shadow_color = Color( 0.117647, 0, 0.235294, 0.784314 )
shadow_gradient_length = 3.0
shadow_filter = 5
shadow_filter_smooth = 3.0

[node name="OccluderEdge" type="LightOccluder2D" parent="LightSource"]
position = Vector2( -860, 0 )
occluder = SubResource( 3 )
script = ExtResource( 3 )

[node name="DamageArea" type="Area2D" parent="LightSource/OccluderEdge"]
position = Vector2( -100, 0 )
script = ExtResource( 2 )

[node name="DamageZone" type="CollisionShape2D" parent="LightSource/OccluderEdge/DamageArea"]
position = Vector2( -150, 0 )
shape = SubResource( 4 )
[connection signal="PlayerCollision" from="LightSource/OccluderEdge/DamageArea" to="." method="_on_DamageArea_PlayerCollision"]
